dev: edited sql queries
